# FrankClaw

./: .ai-jail  .env.smoke.example  .gitignore  AUDIT_PLAN.md  CHANNEL_SETUP.md  CLAUDE.md  Cargo.toml  OPENCLAW_SECURITY_AUDIT.md  PARITY_TODO.md  README.md  ROADMAP.md  docker-compose.yml
.claude/: .nfs00000000019aa31c00001bac
crates/frankclaw-channels/: Cargo.toml
crates/frankclaw-channels/src/: discord.rs  email.rs  inbound_media.rs  lib.rs  media_text.rs  outbound_media.rs  outbound_text.rs  signal.rs  slack.rs  telegram.rs  web.rs  whatsapp.rs
crates/frankclaw-cli/: Cargo.toml
crates/frankclaw-cli/locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ko.yml  pt-BR.yml  pt-PT.yml
crates/frankclaw-cli/src/: main.rs  repl.rs  terminal.rs
crates/frankclaw-core/: Cargo.toml
crates/frankclaw-core/src/: api_keys.rs  auth.rs  canvas.rs  channel.rs  config.rs  error.rs  hooks.rs  lib.rs  links.rs  media.rs  model.rs  protocol.rs  sanitize.rs  session.rs  tool_services.rs  types.rs
crates/frankclaw-cron/: Cargo.toml
crates/frankclaw-cron/src/: job.rs  lib.rs  service.rs  triggers.rs
crates/frankclaw-crypto/: Cargo.toml
crates/frankclaw-crypto/src/: encryption.rs  hashing.rs  keys.rs  lib.rs  token.rs
crates/frankclaw-gateway/: Cargo.toml
crates/frankclaw-gateway/src/: audit.rs  auth.rs  broadcast.rs  canvas.rs  delivery.rs  lib.rs  methods.rs  pairing.rs  rate_limit.rs  server.rs  state.rs  test_fixtures.rs  tunnel.rs  ui.rs  webhooks.rs  ws.rs
crates/frankclaw-media/: Cargo.toml
crates/frankclaw-media/src/: fetch.rs  lib.rs  store.rs  understanding.rs  virustotal.rs
crates/frankclaw-memory/: Cargo.toml
crates/frankclaw-memory/src/: chunking.rs  embedding.rs  lib.rs  store.rs  sync.rs
crates/frankclaw-models/: Cargo.toml
crates/frankclaw-models/src/: anthropic.rs  cache.rs  catalog.rs  cost_guard.rs  costs.rs  failover.rs  lib.rs  ollama.rs  openai.rs  openai_compat.rs  retry.rs  routing.rs  sse.rs
crates/frankclaw-models/tests/: integration.rs  smoke.rs
crates/frankclaw-plugin-sdk/: Cargo.toml
crates/frankclaw-plugin-sdk/src/: discovery.rs  lib.rs
crates/frankclaw-runtime/: Cargo.toml
crates/frankclaw-runtime/prompts/: agent_context.md  agent_identity.md  agent_safety.md  agent_tools.md  compaction_summarize.md  context_compaction.md  subagent_can_spawn.md  subagent_identity.md  subagent_max_depth.md  subagent_timeout.md
crates/frankclaw-runtime/src/: commands.rs  context.rs  leak_detector.rs  lib.rs  prompts.rs  sanitize.rs  subagent.rs
crates/frankclaw-sessions/: Cargo.toml
crates/frankclaw-sessions/src/: lib.rs  migrations.rs  store.rs
crates/frankclaw-tools/: .ai-jail  Cargo.toml
crates/frankclaw-tools/src/: bash.rs  config_tools.rs  cron_tools.rs  file.rs  image.rs  lib.rs  memory.rs  messaging.rs  pdf.rs  sessions.rs  web.rs
crates/frankclaw-tools/src/mcp/: mod.rs  protocol.rs
docker/chromium/: Dockerfile  entrypoint.sh
docs/: AUDIT_PLAN.md  CHANNEL_SETUP.md  OPENCLAW_ANALYSIS.md  PARITY_TODO.md  PRIVACY_POLICY.md  ROADMAP.md  TERMS_OF_SERVICE.md
