[workspace]
resolver = "2"
members = [
    "crates/frankclaw-core",
    "crates/frankclaw-crypto",
    "crates/frankclaw-gateway",
    "crates/frankclaw-runtime",
    "crates/frankclaw-sessions",
    "crates/frankclaw-models",
    "crates/frankclaw-channels",
    "crates/frankclaw-memory",
    "crates/frankclaw-cron",
    "crates/frankclaw-media",
    "crates/frankclaw-tools",
    "crates/frankclaw-plugin-sdk",
    "crates/frankclaw-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/frankclaw/frankclaw"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "timeout", "limit"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json5 = "0.4"
toml = "0.8"

# Validation
validator = { version = "0.20", features = ["derive"] }
schemars = "0.8"
jsonschema = "0.28"

# Crypto
ring = "0.17"
chacha20poly1305 = "0.10"
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Secrets
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "multipart"] }

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
rustyline = "15"

# Regex
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6"
arc-swap = "1"

# Cancellation & streaming
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"
snafu = "0.9"

# Derive macros
strum = { version = "0.26", features = ["derive"] }
derive_more = { version = "1", features = ["display"] }

# Config
dirs = "6"
figment = { version = "0.10.19", features = ["toml", "env"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# URL
url = { version = "2", features = ["serde"] }

# HTML→text conversion
html2text = "0.14"

# PDF text extraction
pdf-extract = "0.10"

# Byte sizes
bytesize = { version = "2", features = ["serde"] }

# Cron expressions
cron = "0.15"

# Email (IMAP/SMTP)
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
mail-parser = "0.9"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "0.26"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Markdown parsing
pulldown-cmark = "0.12"

# Async trait
async-trait = "0.1"

# Internationalization
rust-i18n = "3"

# Internal crates
frankclaw-core = { path = "crates/frankclaw-core" }
frankclaw-crypto = { path = "crates/frankclaw-crypto" }
frankclaw-gateway = { path = "crates/frankclaw-gateway" }
frankclaw-runtime = { path = "crates/frankclaw-runtime" }
frankclaw-sessions = { path = "crates/frankclaw-sessions" }
frankclaw-models = { path = "crates/frankclaw-models" }
frankclaw-channels = { path = "crates/frankclaw-channels" }
frankclaw-memory = { path = "crates/frankclaw-memory" }
frankclaw-cron = { path = "crates/frankclaw-cron" }
frankclaw-media = { path = "crates/frankclaw-media" }
frankclaw-tools = { path = "crates/frankclaw-tools" }
frankclaw-plugin-sdk = { path = "crates/frankclaw-plugin-sdk" }

# Testing
rstest = "0.25"

# =============================================================================
# WORKSPACE LINTS
# =============================================================================

[workspace.lints]

[workspace.lints.clippy]
# absolute_paths = "deny"
absurd_extreme_comparisons = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
almost_complete_range = "deny"
almost_swapped = "deny"
approx_constant = "deny"
# arbitrary_source_item_ordering = "deny"
arc_with_non_send_sync = "deny"
# arithmetic_side_effects = "deny"
as_conversions = "allow"
as_pointer_underscore = "deny"
as_ptr_cast_mut = "deny"
as_underscore = "deny"
assertions_on_constants = "deny"
assertions_on_result_states = "deny"
assign_op_pattern = "deny"
assigning_clones = "deny"
async_yields_async = "deny"
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
bad_bit_mask = "deny"
big_endian_bytes = "allow"
bind_instead_of_map = "deny"
blanket_clippy_restriction_lints = "deny"
blocks_in_conditions = "deny"
bool_assert_comparison = "deny"
bool_comparison = "deny"
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
borrow_deref_ref = "deny"
borrow_interior_mutable_const = "deny"
borrowed_box = "deny"
box_collection = "deny"
box_default = "deny"
boxed_local = "deny"
branches_sharing_code = "deny"
builtin_type_shadow = "deny"
byte_char_slices = "deny"
bytes_count_to_len = "deny"
bytes_nth = "deny"
# cargo_common_metadata = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_abs_to_unsigned = "deny"
cast_enum_constructor = "deny"
cast_enum_truncation = "deny"
cast_lossless = "deny"
cast_nan_to_int = "deny"
# cast_possible_truncation = "deny"
# cast_possible_wrap = "deny"
# cast_precision_loss = "deny"
cast_ptr_alignment = "deny"
# cast_sign_loss = "deny"
cast_slice_different_sizes = "deny"
cast_slice_from_raw_parts = "deny"
cfg_not_test = "deny"
char_indices_as_byte_indices = "deny"
char_lit_as_u8 = "deny"
chars_last_cmp = "deny"
chars_next_cmp = "deny"
checked_conversions = "deny"
clear_with_drain = "deny"
clone_on_copy = "deny"
# clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
cloned_ref_to_slice_refs = "deny"
cmp_null = "deny"
cmp_owned = "deny"
coerce_container_to_any = "deny"
# cognitive_complexity = "deny"
collapsible_else_if = "deny"
collapsible_if = "deny"
collapsible_match = "deny"
collapsible_str_replace = "deny"
collection_is_never_read = "deny"
comparison_chain = "deny"
comparison_to_empty = "deny"
confusing_method_to_numeric_cast = "deny"
const_is_empty = "deny"
copy_iterator = "deny"
crate_in_macro_def = "deny"
create_dir = "deny"
crosspointer_transmute = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
decimal_bitwise_operands = "deny"
decimal_literal_representation = "deny"
declare_interior_mutable_const = "deny"
default_constructed_unit_structs = "deny"
default_instead_of_iter_empty = "deny"
# default_numeric_fallback = "deny"
default_trait_access = "deny"
default_union_representation = "deny"
deprecated_cfg_attr = "deny"
deprecated_clippy_cfg_attr = "deny"
deprecated_semver = "deny"
deref_addrof = "deny"
deref_by_slicing = "deny"
derivable_impls = "deny"
derive_ord_xor_partial_ord = "deny"
derive_partial_eq_without_eq = "deny"
derived_hash_with_manual_eq = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
disallowed_names = "deny"
disallowed_script_idents = "deny"
disallowed_types = "deny"
diverging_sub_expression = "deny"
doc_broken_link = "deny"
doc_comment_double_space_linebreaks = "deny"
doc_include_without_cfg = "deny"
doc_lazy_continuation = "deny"
doc_link_code = "deny"
doc_link_with_quotes = "deny"
# doc_markdown = "deny"
doc_nested_refdefs = "deny"
doc_overindented_list_items = "deny"
# doc_paragraphs_missing_punctuation = "deny"
doc_suspicious_footnotes = "deny"
double_comparisons = "deny"
double_ended_iterator_last = "deny"
double_must_use = "deny"
double_parens = "deny"
drain_collect = "deny"
drop_non_drop = "deny"
duplicate_mod = "deny"
duplicate_underscore_argument = "deny"
duplicated_attributes = "deny"
# # duration_suboptimal_units = "deny"
duration_subsec = "deny"
eager_transmute = "deny"
elidable_lifetime_names = "deny"
else_if_without_else = "deny"
empty_docs = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_enums = "deny"
empty_line_after_doc_comments = "deny"
empty_line_after_outer_attr = "deny"
empty_loop = "deny"
empty_structs_with_brackets = "deny"
enum_clike_unportable_variant = "deny"
enum_glob_use = "deny"
enum_variant_names = "deny"
eq_op = "deny"
equatable_if_let = "deny"
erasing_op = "deny"
err_expect = "deny"
error_impl_error = "deny"
excessive_nesting = "deny"
excessive_precision = "deny"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
exit = "deny"
expect_fun_call = "deny"
# expect_used = "deny"
expl_impl_clone_on_copy = "deny"
explicit_auto_deref = "deny"
explicit_counter_loop = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
explicit_write = "deny"
extend_with_drain = "deny"
extra_unused_lifetimes = "deny"
extra_unused_type_parameters = "deny"
fallible_impl_from = "deny"
field_reassign_with_default = "deny"
field_scoped_visibility_modifiers = "allow"
filetype_is_file = "deny"
filter_map_bool_then = "deny"
filter_map_identity = "deny"
filter_map_next = "deny"
filter_next = "deny"
flat_map_identity = "deny"
flat_map_option = "deny"
float_arithmetic = "allow"
float_cmp = "allow"
float_cmp_const = "deny"
float_equality_without_abs = "deny"
fn_params_excessive_bools = "deny"
fn_to_numeric_cast = "deny"
fn_to_numeric_cast_any = "deny"
fn_to_numeric_cast_with_truncation = "deny"
for_kv_map = "deny"
forget_non_drop = "deny"
format_collect = "deny"
format_in_format_args = "deny"
format_push_string = "deny"
four_forward_slashes = "deny"
from_iter_instead_of_collect = "deny"
from_over_into = "deny"
from_raw_with_void_ptr = "deny"
from_str_radix_10 = "deny"
future_not_send = "deny"
get_first = "deny"
get_last_with_len = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
identity_op = "deny"
if_let_mutex = "deny"
if_not_else = "deny"
if_same_then_else = "deny"
if_then_some_else_none = "deny"
ifs_same_cond = "deny"
ignore_without_reason = "deny"
ignored_unit_patterns = "deny"
impl_hash_borrow_with_str_and_bytes = "deny"
# impl_trait_in_params = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
implicit_return = "allow"
implicit_saturating_add = "deny"
implicit_saturating_sub = "deny"
implied_bounds_in_impls = "deny"
impossible_comparisons = "deny"
imprecise_flops = "deny"
incompatible_msrv = "deny"
inconsistent_digit_grouping = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
# indexing_slicing = "deny"
ineffective_bit_mask = "deny"
ineffective_open_options = "deny"
inefficient_to_string = "deny"
infallible_destructuring_match = "deny"
infallible_try_from = "deny"
infinite_iter = "deny"
infinite_loop = "deny"
inherent_to_string = "deny"
inherent_to_string_shadow_display = "deny"
init_numbered_fields = "deny"
inline_always = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
inline_fn_without_body = "deny"
inspect_for_each = "deny"
int_plus_one = "deny"
integer_division = "allow"
integer_division_remainder_used = "allow"
into_iter_on_ref = "deny"
into_iter_without_iter = "deny"
invalid_regex = "deny"
invalid_upcast_comparisons = "deny"
inverted_saturating_sub = "deny"
invisible_characters = "deny"
io_other_error = "deny"
ip_constant = "deny"
is_digit_ascii_radix = "deny"
items_after_statements = "deny"
items_after_test_module = "deny"
iter_cloned_collect = "deny"
iter_count = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_kv_map = "deny"
iter_next_loop = "deny"
iter_next_slice = "deny"
iter_not_returning_iterator = "deny"
iter_nth = "deny"
iter_nth_zero = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_out_of_bounds = "deny"
iter_over_hash_type = "allow"
iter_overeager_cloned = "deny"
iter_skip_next = "deny"
iter_skip_zero = "deny"
iter_with_drain = "deny"
iter_without_into_iter = "deny"
iterator_step_by_zero = "deny"
join_absolute_paths = "deny"
just_underscores_and_digits = "deny"
large_const_arrays = "deny"
large_digit_groups = "deny"
large_enum_variant = "deny"
large_futures = "deny"
large_include_file = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
large_types_passed_by_value = "deny"
legacy_numeric_constants = "deny"
len_without_is_empty = "deny"
len_zero = "deny"
let_and_return = "deny"
let_underscore_future = "deny"
let_underscore_lock = "deny"
let_underscore_must_use = "allow"
# let_underscore_untyped = "deny"
let_unit_value = "deny"
let_with_type_underscore = "deny"
lines_filter_map_ok = "deny"
linkedlist = "deny"
lint_groups_priority = "deny"
literal_string_with_formatting_args = "deny"
little_endian_bytes = "allow"
lossy_float_literal = "deny"
macro_metavars_in_unsafe = "deny"
macro_use_imports = "deny"
main_recursion = "deny"
manual_abs_diff = "deny"
manual_assert = "deny"
manual_async_fn = "deny"
manual_bits = "deny"
manual_c_str_literals = "deny"
# # manual_checked_ops = "deny"
manual_clamp = "deny"
manual_contains = "deny"
manual_dangling_ptr = "deny"
manual_div_ceil = "deny"
manual_filter = "deny"
manual_filter_map = "deny"
manual_find = "deny"
manual_find_map = "deny"
manual_flatten = "deny"
manual_hash_one = "deny"
manual_ignore_case_cmp = "deny"
# # manual_ilog2 = "deny"
manual_inspect = "deny"
manual_instant_elapsed = "deny"
manual_is_ascii_check = "deny"
manual_is_finite = "deny"
manual_is_infinite = "deny"
manual_is_multiple_of = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_main_separator_str = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_midpoint = "deny"
manual_next_back = "deny"
manual_non_exhaustive = "deny"
manual_ok_err = "deny"
manual_ok_or = "deny"
manual_option_as_slice = "deny"
manual_pattern_char_comparison = "deny"
manual_range_contains = "deny"
manual_range_patterns = "deny"
manual_rem_euclid = "deny"
manual_repeat_n = "deny"
manual_retain = "deny"
manual_rotate = "deny"
manual_saturating_arithmetic = "deny"
manual_slice_fill = "deny"
manual_slice_size_calculation = "deny"
manual_split_once = "deny"
manual_str_repeat = "deny"
manual_string_new = "deny"
manual_strip = "deny"
manual_swap = "deny"
# # manual_take = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
manual_unwrap_or_default = "deny"
manual_while_let_some = "deny"
many_single_char_names = "deny"
map_all_any_identity = "deny"
map_clone = "deny"
map_collect_result_unit = "deny"
map_entry = "deny"
# map_err_ignore = "deny"
map_flatten = "deny"
map_identity = "deny"
map_unwrap_or = "deny"
map_with_unused_argument_over_ranges = "deny"
match_as_ref = "deny"
match_bool = "deny"
match_like_matches_macro = "deny"
match_overlapping_arm = "deny"
match_ref_pats = "deny"
match_result_ok = "deny"
# match_same_arms = "deny"
match_single_binding = "deny"
match_str_case_mismatch = "deny"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "deny"
maybe_infinite_iter = "deny"
mem_forget = "deny"
mem_replace_option_with_none = "deny"
mem_replace_option_with_some = "deny"
mem_replace_with_default = "deny"
mem_replace_with_uninit = "deny"
min_ident_chars = "allow"
min_max = "deny"
mismatching_type_param_order = "deny"
misnamed_getters = "deny"
misrefactored_assign_op = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
# missing_const_for_fn = "deny"
missing_const_for_thread_local = "deny"
missing_docs_in_private_items = "allow"
missing_enforced_import_renames = "deny"
# missing_errors_doc = "deny"
missing_fields_in_debug = "allow"
# missing_inline_in_public_items = "deny"
# missing_panics_doc = "deny"
missing_safety_doc = "deny"
missing_spin_loop = "deny"
missing_trait_methods = "allow"
missing_transmute_annotations = "deny"
mistyped_literal_suffixes = "deny"
mixed_attributes_style = "deny"
mixed_case_hex_literals = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "allow"
module_inception = "deny"
# module_name_repetitions = "deny"
modulo_arithmetic = "deny"
modulo_one = "deny"
multi_assignments = "deny"
multiple_bound_locations = "deny"
multiple_crate_versions = "allow"
multiple_inherent_impl = "allow"
multiple_unsafe_ops_per_block = "deny"
# must_use_candidate = "deny"
must_use_unit = "deny"
mut_from_ref = "deny"
mut_mut = "deny"
mut_mutex_lock = "deny"
mut_range_bound = "deny"
mutable_key_type = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
naive_bytecount = "deny"
needless_arbitrary_self_type = "deny"
needless_as_bytes = "deny"
needless_bitwise_bool = "deny"
needless_bool = "deny"
needless_bool_assign = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_borrows_for_generic_args = "deny"
needless_character_iteration = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_doctest_main = "deny"
needless_else = "deny"
needless_for_each = "deny"
needless_ifs = "deny"
needless_late_init = "deny"
needless_lifetimes = "deny"
needless_match = "deny"
needless_maybe_sized = "deny"
needless_option_as_deref = "deny"
needless_option_take = "deny"
needless_parens_on_range_literals = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
needless_pub_self = "deny"
needless_question_mark = "deny"
needless_range_loop = "deny"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
needless_return = "deny"
needless_return_with_question_mark = "deny"
needless_splitn = "deny"
needless_type_cast = "deny"
needless_update = "deny"
neg_cmp_op_on_partial_ord = "deny"
neg_multiply = "deny"
negative_feature_names = "deny"
never_loop = "deny"
new_ret_no_self = "deny"
new_without_default = "deny"
no_effect = "deny"
no_effect_replace = "deny"
no_effect_underscore_binding = "deny"
no_mangle_with_rust_abi = "deny"
non_ascii_literal = "allow"
non_canonical_clone_impl = "deny"
non_canonical_partial_ord_impl = "deny"
non_minimal_cfg = "deny"
non_octal_unix_permissions = "deny"
non_send_fields_in_send_ty = "deny"
non_std_lazy_statics = "deny"
non_zero_suggestions = "deny"
nonminimal_bool = "deny"
nonsensical_open_options = "deny"
nonstandard_macro_braces = "deny"
not_unsafe_ptr_arg_deref = "deny"
obfuscated_if_else = "deny"
octal_escapes = "deny"
ok_expect = "deny"
only_used_in_recursion = "deny"
op_ref = "deny"
option_as_ref_cloned = "deny"
option_as_ref_deref = "deny"
option_env_unwrap = "deny"
option_filter_map = "deny"
# option_if_let_else = "deny"
option_map_or_none = "deny"
option_map_unit_fn = "deny"
option_option = "deny"
or_fun_call = "deny"
or_then_unwrap = "deny"
out_of_bounds_indexing = "deny"
overly_complex_bool_expr = "deny"
owned_cow = "deny"
panic = "deny"
panic_in_result_fn = "deny"
panicking_overflow_checks = "deny"
panicking_unwrap = "deny"
partial_pub_fields = "deny"
partialeq_ne_impl = "deny"
partialeq_to_none = "deny"
path_buf_push_overwrite = "deny"
path_ends_with_ext = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "allow"
permissions_set_readonly_false = "deny"
pointer_format = "deny"
pointers_in_nomem_asm_block = "deny"
possible_missing_comma = "deny"
possible_missing_else = "deny"
precedence = "deny"
precedence_bits = "deny"
print_in_format_impl = "allow"
print_literal = "allow"
print_stderr = "allow"
print_stdout = "allow"
print_with_newline = "allow"
println_empty_string = "allow"
ptr_arg = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
ptr_eq = "deny"
ptr_offset_by_literal = "deny"
ptr_offset_with_cast = "deny"
pub_underscore_fields = "deny"
pub_use = "allow"
pub_with_shorthand = "allow"
pub_without_shorthand = "deny"
question_mark = "deny"
question_mark_used = "allow"
range_minus_one = "deny"
range_plus_one = "deny"
range_zip_with_len = "deny"
rc_buffer = "deny"
rc_clone_in_vec_init = "deny"
rc_mutex = "deny"
read_line_without_trim = "deny"
read_zero_byte_vec = "deny"
readonly_write_lock = "deny"
recursive_format_impl = "deny"
redundant_allocation = "deny"
redundant_as_str = "deny"
redundant_async_block = "deny"
redundant_at_rest_pattern = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_call = "deny"
redundant_closure_for_method_calls = "deny"
redundant_comparisons = "deny"
redundant_else = "deny"
redundant_feature_names = "deny"
redundant_field_names = "deny"
redundant_guards = "deny"
redundant_iter_cloned = "deny"
redundant_locals = "deny"
redundant_pattern = "deny"
redundant_pattern_matching = "deny"
redundant_pub_crate = "deny"
redundant_slicing = "deny"
redundant_static_lifetimes = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_as_ptr = "deny"
ref_binding_to_reference = "deny"
ref_option = "deny"
ref_option_ref = "deny"
ref_patterns = "allow"
regex_creation_in_loops = "deny"
renamed_function_params = "deny"
repeat_once = "deny"
repeat_vec_with_capacity = "deny"
replace_box = "deny"
repr_packed_without_abi = "deny"
reserve_after_initialization = "deny"
rest_pat_in_fully_bound_structs = "deny"
result_filter_map = "deny"
result_large_err = "deny"
result_map_or_into_option = "deny"
result_map_unit_fn = "deny"
result_unit_err = "deny"
return_and_then = "deny"
return_self_not_must_use = "deny"
reversed_empty_ranges = "deny"
same_functions_in_if_condition = "deny"
same_item_push = "deny"
same_length_and_capacity = "deny"
same_name_method = "deny"
search_is_some = "deny"
seek_from_current = "deny"
seek_to_start_instead_of_rewind = "deny"
self_assignment = "deny"
self_named_constructors = "deny"
self_named_module_files = "deny"
self_only_used_in_recursion = "deny"
semicolon_if_nothing_returned = "deny"
semicolon_inside_block = "deny"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
serde_api_misuse = "deny"
set_contains_or_insert = "deny"
# shadow_reuse = "deny"
shadow_same = "deny"
# shadow_unrelated = "deny"
short_circuit_statement = "deny"
should_implement_trait = "deny"
should_panic_without_expect = "deny"
significant_drop_in_scrutinee = "deny"
# significant_drop_tightening = "deny"
similar_names = "deny"
single_call_fn = "allow"
single_char_add_str = "deny"
single_char_lifetime_names = "deny"
single_char_pattern = "deny"
single_component_path_imports = "deny"
single_element_loop = "deny"
single_match = "deny"
single_match_else = "deny"
single_option_map = "deny"
single_range_in_vec_init = "deny"
size_of_in_element_count = "deny"
size_of_ref = "deny"
skip_while_next = "deny"
sliced_string_as_bytes = "deny"
slow_vector_initialization = "deny"
stable_sort_primitive = "deny"
# std_instead_of_alloc = "deny"
# std_instead_of_core = "deny"
str_split_at_newline = "deny"
# str_to_string = "deny"
string_add = "deny"
string_add_assign = "deny"
string_extend_chars = "deny"
string_from_utf8_as_bytes = "deny"
string_lit_as_bytes = "deny"
string_lit_chars_any = "deny"
# string_slice = "deny"
strlen_on_c_strings = "deny"
# struct_excessive_bools = "deny"
struct_field_names = "deny"
suboptimal_flops = "deny"
suspicious_arithmetic_impl = "deny"
suspicious_assignment_formatting = "deny"
suspicious_command_arg_space = "deny"
suspicious_doc_comments = "deny"
suspicious_else_formatting = "deny"
suspicious_map = "deny"
suspicious_op_assign_impl = "deny"
suspicious_open_options = "deny"
suspicious_operation_groupings = "deny"
suspicious_splitn = "deny"
suspicious_to_owned = "deny"
suspicious_unary_op_formatting = "deny"
suspicious_xor_used_as_pow = "deny"
swap_ptr_to_ref = "deny"
swap_with_temporary = "deny"
tabs_in_doc_comments = "deny"
temporary_assignment = "deny"
test_attr_in_doctest = "deny"
tests_outside_test_module = "deny"
to_digit_is_some = "deny"
to_string_in_format_args = "deny"
to_string_trait_impl = "deny"
todo = "deny"
too_long_first_doc_paragraph = "deny"
too_many_arguments = "deny"
too_many_lines = "deny"
toplevel_ref_arg = "deny"
trailing_empty_array = "deny"
trait_duplication_in_bounds = "deny"
transmute_bytes_to_str = "deny"
transmute_int_to_bool = "deny"
transmute_int_to_non_zero = "deny"
transmute_null_to_fn = "deny"
transmute_ptr_to_ptr = "deny"
transmute_ptr_to_ref = "deny"
transmute_undefined_repr = "deny"
transmutes_expressible_as_ptr_casts = "deny"
transmuting_null = "deny"
trim_split_whitespace = "deny"
trivial_regex = "deny"
trivially_copy_pass_by_ref = "deny"
try_err = "deny"
tuple_array_conversions = "deny"
type_complexity = "deny"
type_id_on_box = "deny"
type_repetition_in_bounds = "deny"
unbuffered_bytes = "deny"
unchecked_time_subtraction = "deny"
unconditional_recursion = "deny"
undocumented_unsafe_blocks = "deny"
unicode_not_nfc = "deny"
unimplemented = "deny"
uninhabited_references = "deny"
uninit_assumed_init = "deny"
uninit_vec = "deny"
uninlined_format_args = "deny"
unit_arg = "deny"
unit_cmp = "deny"
unit_hash = "deny"
unit_return_expecting_ord = "deny"
unnecessary_box_returns = "deny"
unnecessary_cast = "deny"
unnecessary_clippy_cfg = "deny"
unnecessary_debug_formatting = "deny"
unnecessary_fallible_conversions = "deny"
unnecessary_filter_map = "deny"
unnecessary_find_map = "deny"
unnecessary_first_then_check = "deny"
unnecessary_fold = "deny"
unnecessary_get_then_check = "deny"
unnecessary_join = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_literal_bound = "deny"
unnecessary_literal_unwrap = "deny"
unnecessary_map_on_constructor = "deny"
unnecessary_map_or = "deny"
unnecessary_min_or_max = "deny"
unnecessary_mut_passed = "deny"
unnecessary_operation = "deny"
unnecessary_option_map_or_else = "deny"
unnecessary_owned_empty_strings = "deny"
unnecessary_result_map_or_else = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unnecessary_semicolon = "deny"
unnecessary_sort_by = "deny"
unnecessary_struct_initialization = "deny"
unnecessary_to_owned = "deny"
unnecessary_unwrap = "deny"
unnecessary_wraps = "deny"
unneeded_field_pattern = "deny"
unneeded_struct_pattern = "deny"
unneeded_wildcard_pattern = "deny"
unnested_or_patterns = "deny"
unreachable = "deny"
# unreadable_literal = "deny"
unsafe_derive_deserialize = "deny"
unsafe_removed_from_name = "deny"
# unseparated_literal_suffix = "deny"
unsound_collection_transmute = "deny"
unused_async = "deny"
unused_enumerate_index = "deny"
unused_format_specs = "deny"
unused_io_amount = "deny"
unused_peekable = "deny"
unused_result_ok = "deny"
unused_rounding = "deny"
unused_self = "deny"
# unused_trait_names = "deny"
unused_unit = "deny"
unusual_byte_groupings = "deny"
unwrap_in_result = "deny"
unwrap_or_default = "deny"
unwrap_used = "deny"
upper_case_acronyms = "deny"
use_debug = "allow"
use_self = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
useless_asref = "deny"
useless_attribute = "deny"
useless_concat = "deny"
useless_conversion = "deny"
useless_format = "deny"
useless_let_if_seq = "deny"
useless_nonzero_new_unchecked = "deny"
useless_transmute = "deny"
useless_vec = "deny"
vec_box = "deny"
vec_init_then_push = "deny"
vec_resize_to_zero = "deny"
verbose_bit_mask = "deny"
verbose_file_reads = "deny"
volatile_composites = "deny"
waker_clone_wake = "deny"
while_float = "deny"
while_immutable_condition = "deny"
while_let_loop = "deny"
while_let_on_iterator = "deny"
wildcard_dependencies = "deny"
# wildcard_enum_match_arm = "deny"
wildcard_imports = "deny"
wildcard_in_or_patterns = "deny"
write_literal = "deny"
write_with_newline = "deny"
writeln_empty_string = "deny"
wrong_self_convention = "deny"
wrong_transmute = "deny"
zero_divided_by_zero = "deny"
zero_prefixed_literal = "deny"
zero_ptr = "deny"
zero_repeat_side_effects = "deny"
zero_sized_map_values = "deny"
zombie_processes = "deny"
zst_offset = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
