[package]
name = "frankclaw-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
