[package]
name = "frankclaw-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frankclaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
uuid = { workspace = true }
